Add internal JRE.